# vehicle-net

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  SETUP_INSTRUCTIONS.md  TEST.md  package-lock.json  package.json  run-web.sh
.claude/: settings.local.json
.github/workflows/: integration-tests.yml
contracts/: .env.example  CONTRACTS_README.md  foundry.toml
contracts/script/: DemoScript.s.sol  DeploySystem.s.sol
contracts/src/: AccessControl.sol  DataMarketplace.sol  SimpleVehicleNodes.sol  VehicleRegistry.sol
contracts/test/: AccessControl.t.sol  DataMarketplace.t.sol  Integration.t.sol  SimpleVehicleNodes.t.sol  VehicleRegistry.t.sol
rust/: Cargo.toml  build.rs
rust/src/: contract_client.rs  main.rs  signer.rs  simple_contract_client.rs
rust/src/contracts/: access_control.rs  data_marketplace.rs  mod.rs  vehicle_registry.rs
scripts/: complete-setup.sh  config.sh  demo-setup.sh  deploy-simple-contracts.sh  deploy.sh  dev_frontend.sh  quick-setup.bat  register-vehicle.sh  run-contracts.sh  run-rust.sh  run-vehicle-node.sh  run-web.sh  run_vehicle.sh  terminal-contracts.sh  terminal-vehicle.sh  terminal-web.sh  test-integration.sh  test-simple-system.sh
web/: .env.example  README.md  SECURITY.md  bts.jsonc  bun.lockb  next.config.js  package-lock.json  package.json  tailwind.config.js  test-add-vehicle.js  test-vehicle-registration.js  tsconfig.tsbuildinfo
web/src/app/: layout.tsx  page.tsx
web/src/components/: AuthButton.tsx  AuthProvider.tsx  Header.tsx  MockMarketplace.tsx  (+11 more)
web_site/: README.md
web_site/web/: package-lock.json  package.json
(+22 files in other folders)
