[package]
name = "vehicle-net"
version = "0.1.0"
edition = "2021"
authors = ["Vehicle Network Team"]
description = "Decentralized vehicle condition reporting system"

[dependencies]
ethers = { version = "2.0", features = ["legacy"] }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
tokio = { version = "1.0", features = ["full"] }